modified swagger doc for verification APIs
